# CppCallPython

./: CMakeLists.txt  README.md  seg(复件).cpp  seg-bak.cpp  seg.cpp  seg.py  seg_script.py
script/: seg_script.py
test_dicom_volume/: IMG0001.dcm  IMG0002.dcm  IMG0003.dcm  IMG0004.dcm  IMG0005.dcm  IMG0006.dcm  IMG0007.dcm  IMG0008.dcm  IMG0009.dcm  IMG0010.dcm  IMG0011.dcm  IMG0012.dcm  IMG0013.dcm  IMG0014.dcm  IMG0015.dcm  IMG0016.dcm  IMG0017.dcm  IMG0018.dcm  IMG0019.dcm  IMG0020.dcm  IMG0021.dcm  IMG0022.dcm  IMG0023.dcm  IMG0024.dcm  IMG0025.dcm  IMG0026.dcm  IMG0027.dcm  IMG0028.dcm  IMG0029.dcm  IMG0030.dcm  IMG0031.dcm  IMG0032.dcm  IMG0033.dcm  IMG0034.dcm  IMG0035.dcm  IMG0036.dcm  IMG0037.dcm  IMG0038.dcm  IMG0039.dcm  IMG0040.dcm  (+224 more)
